VOTE-1029: fix lang selector width overlap

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-banner.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-banner.scss
@@ -15,16 +15,11 @@
 }
 
 .banner__text-container {
-  @include u-height(6);
+  @include at-media-max('tablet') {
+    @include u-height(6);
+  }
+
   @include u-flex('align-center');
-}
-
-.usa-banner__button {
-  @include u-height(6);
-}
-
-.usa-banner__button[aria-expanded=true]{
-  @include u-height(6);
 }
 
 .usa-banner__guidance {
@@ -33,4 +28,8 @@
 
 .usa-banner__header {
   @include u-padding-y(0);
+
+  &--expanded {
+    padding-right: 0;
+  }
 }
