--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-language-selector.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-language-selector.scss
@@ -11,7 +11,6 @@
 
   @include at-media-max('tablet') {
     @include u-padding-y(2);
-    @include u-flex('justify-center');
     background-color: $base-white;
   }
 }
@@ -22,7 +21,6 @@
   }
 
   @include at-media-max('tablet') {
-    @include u-width('full');
     @include u-maxw('mobile');
   }
 }
@@ -54,5 +52,7 @@
 }
 
 .language-selector {
-  position: absolute;
+  @include at-media('tablet') {
+    position: absolute;
+  }
 }
